# 4-bit-Quantized-CUDA-Kernel

./: .gitignore  CMakeLists.txt  README.md
include/: global.h  kernel.cuh  quantize_utils.h
src/: example.cpp  example.cu  kernel.cu  main.cu  quantize_utils.cpp
